# icra2021

./: .gitattributes  .gitignore  .gitmodules  README.md
control_tree_car/: CMakeLists.txt  package.xml
control_tree_car/applications/: CMakeLists.txt
control_tree_car/applications/common/: CMakeLists.txt
control_tree_car/applications/common/common/: CMakeLists.txt  behavior_base.h  behavior_manager.h  control_tree.h  utility.cpp
control_tree_car/applications/common/common/common/: behavior_manager.cpp  common.cpp  control_tree.h  utility.h
control_tree_car/applications/common/nodes/: CMakeLists.txt
control_tree_car/applications/include/control_tree/core/: behavior_manager.h
control_tree_car/applications/obstacles/: CMakeLists.txt  obstacle_avoidance_tree_node_cpp
control_tree_car/applications/obstacles/komo/: CMakeLists.txt
control_tree_car/applications/obstacles/nodes/: CMakeLists.txt  obstacle_avoidance_evaluation_node_cpp  obstacle_popping_control_node_cpp
control_tree_car/applications/pedestrians/: CMakeLists.txt
control_tree_car/applications/pedestrians/nodes/: CMakeLists.txt
control_tree_car/applications/pedestrians/qp/: CMakeLists.txt
control_tree_car/applications/pedestrians/test/: CMakeLists.txt  test_KOMO_collision_avoidance_cpp  test_QP_DecQP.cpp  test_QP_DecQP_utils.cpp  test_QP_constraints.cpp  test_probability_fusion.cpp  test_sparsification.cpp  test_utility_cpp
control_tree_car/applications/src/: gui_control.py  gui_control_obstacle_avoidance.py  gui_control_pedestrian.py  obstacle_batch_launches.py  pedestrian_batch_launches.py
control_tree_car/applications/src/core/: behavior_manager.cpp
control_tree_car/applications/src/komo/: komo_factory.cpp  trajectory_plot.cpp  utility_komo.cpp
control_tree_car/applications/src/qp/: QP_problem.cpp  QP_tree_problem_DecQP.cpp  QP_tree_problem_DecQP_utils.cpp  QP_tree_solver_base.cpp  control_tree_plot.cpp  stopline_qp_tree.cpp
control_tree_car/applications/src/ros/: obstacle_avoidance_evaluation_node.cpp  obstacle_common.cpp  pedestrian_popping_control_node.cpp  pedestrian_tree_qp_node.cpp  trajectory_controller_node.cpp
control_tree_car/applications/test/: CMakeLists.txt  test_KOMO_utility.cpp  test_MPC_model.cpp  test_QP_CGAL.cpp  test_QP_DecQP.cpp  test_QP_DecQP_utils.cpp  test_QP_OSQP.cpp  test_QP_constraints.cpp  test_emergency_braking.cpp  test_obstacle_markers.cpp  test_obstacle_markers_cpp  test_sparsification.cpp
control_tree_car/applications/test/common/: qp_problems.cpp  qp_problems.h
control_tree_car/data/: LGP-real-time-1d.g  LGP-real-time.g
control_tree_car/data/meshes/bmw/: G12Pos8.dae  bmw_.dae  bmw__.dae
control_tree_car/data/urdf/: car.urdf
control_tree_car/include/control_tree/core/: behavior_base.h  behavior_manager.h  control_tree.h  utility.h
control_tree_car/include/control_tree/komo/: obstacle_avoidance_dec.h  obstacle_avoidance_linear.h  obstacle_avoidance_tree.h  trajectory_plot.h  utility_komo.h
control_tree_car/include/control_tree/qp/: MPC_model.h  QP_constraints.h  QP_tree_problem_CGAL.h  QP_tree_problem_DecQP.h  QP_tree_problem_DecQP_utils.h  QP_tree_problem_OSQP.h  QP_tree_problem_base.h  QP_tree_solver_base.h  control_tree.h  control_tree_plot.h  stopline_qp_linear.h  stopline_qp_tree.h
control_tree_car/include/control_tree/ros/: common.h  obstacle_common.h  pedestrian_common.h
control_tree_car/launch/: display_obstacle_avoidance.launch  display_pedestrian.launch  display_single_car.launch  display_three_cars.launch  display_two_cars.launch  obstacle_avoidance.launch  obstacle_avoidance_.launch  pedestrian.launch  pedestrian_komo.launch  single_car.launch  three_cars.launch  two_cars.launch
control_tree_car/meshes/bmw/: bmw.dae
control_tree_car/meshes/bmw_office/: G12Pos8simple.dae
control_tree_car/prius_description/urdf/: prius.urdf
control_tree_car/rviz/: car.rviz  obstacle_avoidance.rviz  pedestrian.rviz  three_cars.rviz  two_cars.rviz
control_tree_car/solver/: CMakeLists.txt  LICENSE  README.md
control_tree_car/solver/Core/Core/: CMakeLists.txt  array.cpp  array.h  array.tpp  graph.cpp  util.cpp  util.h
control_tree_car/solver/OptimDec/: CMakeLists.txt
control_tree_car/solver/OptimDec/OptimDec/: utils.cpp  utils.h
control_tree_car/src/: gui_control_obstacle_avoidance.py
control_tree_car/src/core/: behavior_manager.cpp  utility.cpp
control_tree_car/src/komo/: komo_factory.cpp  obstacle_avoidance_dec.cpp  obstacle_avoidance_linear.cpp  obstacle_avoidance_tree.cpp  trajectory_plot.cpp  utility_komo.cpp
control_tree_car/src/qp/: MPC_model.cpp  QP_constraints.cpp  QP_tree_problem_CGAL.cpp  QP_tree_problem_DecQP.cpp  QP_tree_problem_DecQP_utils.cpp  QP_tree_problem_OSQP.cpp  QP_tree_problem_base.cpp  control_tree_plot.cpp  stopline_qp_linear.cpp  stopline_qp_tree.cpp
control_tree_car/src/ros/: common.cpp  obstacle_avoidance_evaluation_node.cpp  obstacle_avoidance_linear_node.cpp  obstacle_avoidance_tree_node.cpp  obstacle_common.cpp  obstacle_popping_control_node.cpp  pedestrian_common.cpp  pedestrian_popping_control_node.cpp  pedestrian_tree_qp_node.cpp  trajectory_controller_node.cpp
control_tree_car/test/: CMakeLists.txt  test_KOMO_collision_avoidance.cpp  test_KOMO_utility.cpp  test_MPC_model.cpp  test_QP_CGAL.cpp  test_QP_DecQP.cpp  test_QP_DecQP_utils.cpp  test_QP_OSQP.cpp  test_QP_constraints.cpp  test_emergency_braking.cpp  test_obstacle_markers.cpp  test_probability_fusion.cpp  test_utility.cpp
control_tree_car/test/common/: komo_problems.cpp  komo_problems.h  qp_problems.cpp  qp_problems.h
control_tree_car/urdf/: car.urdf
lgp_car_gazebo_plugin/: CMakeLists.txt  package.xml
lgp_car_gazebo_plugin/meshes/: car.blend  car.blend1  car.dae
lgp_car_gazebo_plugin/src/: lgp_car.cpp  lgp_car.hpp  lgp_pedestrian.cpp  lgp_pedestrian.hpp
lgp_car_gazebo_plugin/world/: obstacle_avoidance.world  obstacle_avoidance_2.world  pedestrian_1.world  pedestrian_2.world  pedestrian_3.world  pedestrian_4.world  pedestrian_9.world  single_car.world  three_cars.world  two_cars.world
lgp_car_models/lgp_car/: model.config  (+1 more)
(+66 files in other folders)
